--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,17 +16,17 @@ jobs:
             cc: clang-11
             runner: ubuntu-20.04
             os: linux
-          - flavor: lint
-            cc: gcc
-            runner: ubuntu-20.04
-            os: linux
-          - flavor: tsan
-            cc: clang-11
-            runner: ubuntu-20.04
-            os: linux
-          - cc: clang
-            runner: macos-10.15
-            os: osx
+          # - flavor: lint
+          #   cc: gcc
+          #   runner: ubuntu-20.04
+          #   os: linux
+          # - flavor: tsan
+          #   cc: clang-11
+          #   runner: ubuntu-20.04
+          #   os: linux
+          # - cc: clang
+          #   runner: macos-10.15
+          #   os: osx
     runs-on: ${{ matrix.runner }}
     env:
       CC: ${{ matrix.cc }}
@@ -84,26 +84,26 @@ jobs:
         if: ${{ success() }}
         run: ./ci/before_cache.sh
 
-  windows:
-    runs-on: windows-2016
-    env:
-      DEPS_BUILD_DIR: "C:/projects/nvim-deps"
-      DEPS_PREFIX: "C:/projects/nvim-deps/usr"
-
-    strategy:
-      fail-fast: false
-      matrix:
-        config: [ MINGW_64-gcov, MINGW_32, MSVC_64, MSVC_32 ]
-    name: windows (${{ matrix.config }})
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/cache@v2
-        with:
-          path: C:\projects\nvim-deps
-          key: ${{ matrix.config }}-${{ hashFiles('third-party\**') }}
-
-      - name: Run CI
-        run: powershell ci\build.ps1
-        env:
-          CONFIGURATION: ${{ matrix.config }}
+  # windows:
+  #   runs-on: windows-2016
+  #   env:
+  #     DEPS_BUILD_DIR: "C:/projects/nvim-deps"
+  #     DEPS_PREFIX: "C:/projects/nvim-deps/usr"
+  # 
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       config: [ MINGW_64-gcov, MINGW_32, MSVC_64, MSVC_32 ]
+  #   name: windows (${{ matrix.config }})
+  #   steps:
+  #     - uses: actions/checkout@v2
+  # 
+  #     - uses: actions/cache@v2
+  #       with:
+  #         path: C:\projects\nvim-deps
+  #         key: ${{ matrix.config }}-${{ hashFiles('third-party\**') }}
+  # 
+  #     - name: Run CI
+  #       run: powershell ci\build.ps1
+  #       env:
+  #         CONFIGURATION: ${{ matrix.config }}
